@@ -1,3 +1,11 @@
+2006-12-21  Ulrich Drepper  <drepper@redhat.com>
+
+	* include/atomic.h (atomic_forced_read): New macro.
+
+2006-12-20  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>
+
+	* sysdeps/unix/sysv/linux/sh/bits/shm.h: New file.
+
 2006-12-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* nss/getXXbyYY_r.c: Include atomic.h.
@@ -39,7 +47,7 @@
 
 	[BZ #3747]
 	* stdlib/jrand48_r.c (__jrand48_r): Make sure result is in the
-	[-231 .. 231) range.
+	[-2^31 .. 2^31) range.
 	* stdlib/tst-rand48.c (main): Fix expected values for 64-bit
 	targets.
 	* stdlib/tst-rand48-2.c: New test.
